# VCentenario

./: .env  .env.example  .gitignore  CALIBRACION_REVERSIBLE.md  CLAUDE.md  INVESTIGACION_VCENTENARIO_CONSOLIDADA.md  README.md  VCentenario.md  deploy.sh  investigacion_detectores.md  pyproject.toml
src/vcentenario/: __init__.py  alerts.py  cli.py  config.py  http.py  inference.py  learning.py  models.py  service.py  storage.py  utils.py  webapp.py
src/vcentenario/collectors/: cameras.py  detectors.py  incidents.py  panels.py
tests/: test_cameras.py  test_http.py  test_inference.py  test_learning.py  test_service.py  test_storage.py  test_webapp.py
