[build-system]
requires = ["setuptools>=68,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "vcentenario"
version = "0.1.0"
description = "Monitor MVP del Puente del Centenario con fuentes publicas de la DGT."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
vision = [
  "ultralytics>=8.3,<9",
  "opencv-python-headless>=4.10,<5",
  "numpy>=1.26,<3",
]

[project.scripts]
vcentenario = "vcentenario.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
